--- a/MZ Mobile/Base.lproj/Main.storyboard
+++ b/MZ Mobile/Base.lproj/Main.storyboard
@@ -1,24 +1,94 @@
 <?xml version="1.0" encoding="UTF-8"?>
-<document type="com.apple.InterfaceBuilder3.CocoaTouch.Storyboard.XIB" version="3.0" toolsVersion="13122.16" targetRuntime="iOS.CocoaTouch" propertyAccessControl="none" useAutolayout="YES" useTraitCollections="YES" useSafeAreas="YES" colorMatched="YES" initialViewController="BYZ-38-t0r">
+<document type="com.apple.InterfaceBuilder3.CocoaTouch.Storyboard.XIB" version="3.0" toolsVersion="21507" targetRuntime="iOS.CocoaTouch" propertyAccessControl="none" useAutolayout="YES" useTraitCollections="YES" useSafeAreas="YES" colorMatched="YES" initialViewController="BYZ-38-t0r">
+    <device id="retina6_12" orientation="portrait" appearance="light"/>
     <dependencies>
-        <plugIn identifier="com.apple.InterfaceBuilder.IBCocoaTouchPlugin" version="13104.12"/>
+        <deployment identifier="iOS"/>
+        <plugIn identifier="com.apple.InterfaceBuilder.IBCocoaTouchPlugin" version="21505"/>
         <capability name="Safe area layout guides" minToolsVersion="9.0"/>
+        <capability name="System colors in document resources" minToolsVersion="11.0"/>
         <capability name="documents saved in the Xcode 8 format" minToolsVersion="8.0"/>
     </dependencies>
     <scenes>
         <!--View Controller-->
         <scene sceneID="tne-QT-ifu">
             <objects>
-                <viewController id="BYZ-38-t0r" customClass="ViewController" customModuleProvider="target" sceneMemberID="viewController">
+                <viewController id="BYZ-38-t0r" customClass="ViewController" customModule="MZ_Mobile" customModuleProvider="target" sceneMemberID="viewController">
                     <view key="view" contentMode="scaleToFill" id="8bC-Xf-vdC">
-                        <rect key="frame" x="0.0" y="0.0" width="375" height="667"/>
+                        <rect key="frame" x="0.0" y="0.0" width="393" height="852"/>
                         <autoresizingMask key="autoresizingMask" widthSizable="YES" heightSizable="YES"/>
-                        <color key="backgroundColor" xcode11CocoaTouchSystemColor="systemBackgroundColor" cocoaTouchSystemColor="whiteColor"/>
+                        <subviews>
+                            <tableView clipsSubviews="YES" contentMode="scaleToFill" alwaysBounceVertical="YES" dataMode="prototypes" style="plain" separatorStyle="default" rowHeight="-1" estimatedRowHeight="-1" sectionHeaderHeight="-1" estimatedSectionHeaderHeight="-1" sectionFooterHeight="-1" estimatedSectionFooterHeight="-1" translatesAutoresizingMaskIntoConstraints="NO" id="udY-Rl-RBf">
+                                <rect key="frame" x="0.0" y="59" width="393" height="759"/>
+                                <color key="backgroundColor" systemColor="systemBackgroundColor"/>
+                                <prototypes>
+                                    <tableViewCell clipsSubviews="YES" contentMode="scaleToFill" preservesSuperviewLayoutMargins="YES" selectionStyle="default" indentationWidth="10" reuseIdentifier="ArticleCell" rowHeight="140" id="eCh-xM-Bbf" customClass="ArticleCell" customModule="MZ_Mobile" customModuleProvider="target">
+                                        <rect key="frame" x="0.0" y="50" width="393" height="140"/>
+                                        <autoresizingMask key="autoresizingMask"/>
+                                        <tableViewCellContentView key="contentView" opaque="NO" clipsSubviews="YES" multipleTouchEnabled="YES" contentMode="center" preservesSuperviewLayoutMargins="YES" insetsLayoutMarginsFromSafeArea="NO" tableViewCell="eCh-xM-Bbf" id="0xX-Mk-9Eo">
+                                            <rect key="frame" x="0.0" y="0.0" width="393" height="140"/>
+                                            <autoresizingMask key="autoresizingMask"/>
+                                            <subviews>
+                                                <label opaque="NO" userInteractionEnabled="NO" contentMode="left" horizontalHuggingPriority="251" verticalHuggingPriority="251" ambiguous="YES" text="Article Title Article Title Article Title Article Title Article Title" textAlignment="natural" lineBreakMode="tailTruncation" baselineAdjustment="alignBaselines" adjustsFontSizeToFit="NO" translatesAutoresizingMaskIntoConstraints="NO" id="e4c-r1-Avs">
+                                                    <rect key="frame" x="16" y="16" width="361" height="21"/>
+                                                    <fontDescription key="fontDescription" type="system" pointSize="17"/>
+                                                    <nil key="textColor"/>
+                                                    <nil key="highlightedColor"/>
+                                                </label>
+                                                <label opaque="NO" userInteractionEnabled="NO" contentMode="left" horizontalHuggingPriority="251" verticalHuggingPriority="251" ambiguous="YES" text="Article Body Article Body Article Body Article Body Article Body  Article Body  Article Body  Article Body " textAlignment="natural" lineBreakMode="tailTruncation" numberOfLines="3" baselineAdjustment="alignBaselines" adjustsFontSizeToFit="NO" translatesAutoresizingMaskIntoConstraints="NO" id="0yz-hV-lSL">
+                                                    <rect key="frame" x="16" y="40.666666666666657" width="361" height="61"/>
+                                                    <fontDescription key="fontDescription" type="system" pointSize="17"/>
+                                                    <color key="textColor" systemColor="secondaryLabelColor"/>
+                                                    <nil key="highlightedColor"/>
+                                                </label>
+                                            </subviews>
+                                            <constraints>
+                                                <constraint firstItem="0yz-hV-lSL" firstAttribute="top" secondItem="e4c-r1-Avs" secondAttribute="bottom" constant="3.6666666666666643" id="6xd-a4-h01"/>
+                                                <constraint firstItem="e4c-r1-Avs" firstAttribute="top" secondItem="0xX-Mk-9Eo" secondAttribute="top" constant="16" id="HPg-um-ehe"/>
+                                                <constraint firstAttribute="trailing" secondItem="0yz-hV-lSL" secondAttribute="trailing" constant="16" id="Lrd-Cr-5gc"/>
+                                                <constraint firstItem="e4c-r1-Avs" firstAttribute="leading" secondItem="0xX-Mk-9Eo" secondAttribute="leading" constant="16" id="LtI-fC-Ifn"/>
+                                                <constraint firstAttribute="trailing" secondItem="e4c-r1-Avs" secondAttribute="trailing" constant="16" id="UGZ-O4-BF9"/>
+                                                <constraint firstAttribute="bottom" secondItem="0yz-hV-lSL" secondAttribute="bottom" constant="38.329999999999998" id="eU7-x8-6fV"/>
+                                                <constraint firstItem="0yz-hV-lSL" firstAttribute="leading" secondItem="e4c-r1-Avs" secondAttribute="leading" id="jgu-TL-lRM"/>
+                                            </constraints>
+                                        </tableViewCellContentView>
+                                        <connections>
+                                            <outlet property="articleBody" destination="0yz-hV-lSL" id="mi7-Oe-fmY"/>
+                                            <outlet property="articleTitle" destination="e4c-r1-Avs" id="CP6-q2-3aW"/>
+                                        </connections>
+                                    </tableViewCell>
+                                </prototypes>
+                                <connections>
+                                    <outlet property="dataSource" destination="fj4-Wa-VOs" id="YdY-yo-eof"/>
+                                    <outlet property="delegate" destination="fj4-Wa-VOs" id="xPV-ca-8LU"/>
+                                </connections>
+                            </tableView>
+                        </subviews>
                         <viewLayoutGuide key="safeArea" id="6Tk-OE-BBY"/>
+                        <color key="backgroundColor" systemColor="systemBackgroundColor"/>
+                        <constraints>
+                            <constraint firstItem="6Tk-OE-BBY" firstAttribute="trailing" secondItem="udY-Rl-RBf" secondAttribute="trailing" id="EV3-ER-rgA"/>
+                            <constraint firstItem="udY-Rl-RBf" firstAttribute="top" secondItem="6Tk-OE-BBY" secondAttribute="top" id="R7s-le-1fc"/>
+                            <constraint firstItem="6Tk-OE-BBY" firstAttribute="bottom" secondItem="udY-Rl-RBf" secondAttribute="bottom" id="y6B-iw-UcR"/>
+                            <constraint firstItem="udY-Rl-RBf" firstAttribute="leading" secondItem="6Tk-OE-BBY" secondAttribute="leading" id="yxW-4F-Gca"/>
+                        </constraints>
                     </view>
+                    <connections>
+                        <outlet property="dataSource" destination="fj4-Wa-VOs" id="md1-jB-vSl"/>
+                        <outlet property="tableView" destination="udY-Rl-RBf" id="m2t-hh-Lks"/>
+                    </connections>
                 </viewController>
                 <placeholder placeholderIdentifier="IBFirstResponder" id="dkx-z0-nzr" sceneMemberID="firstResponder"/>
+                <customObject id="fj4-Wa-VOs" customClass="DataSource" customModule="MZ_Mobile" customModuleProvider="target"/>
             </objects>
+            <point key="canvasLocation" x="139.69465648854961" y="3.5211267605633805"/>
         </scene>
     </scenes>
+    <resources>
+        <systemColor name="secondaryLabelColor">
+            <color red="0.23529411764705882" green="0.23529411764705882" blue="0.2627450980392157" alpha="0.59999999999999998" colorSpace="custom" customColorSpace="sRGB"/>
+        </systemColor>
+        <systemColor name="systemBackgroundColor">
+            <color white="1" alpha="1" colorSpace="custom" customColorSpace="genericGamma22GrayColorSpace"/>
+        </systemColor>
+    </resources>
 </document>
